# team4

./: .gitignore  push.sh
lesson10/: Cargo.toml  README.md  lib.rs
lesson10/.ink/abi_gen/: Cargo.toml  main.rs
lesson10/erc20/: lib.rs
lesson11/: Erc20.sol  README.md  SafeMath.sol
lesson11/frontier/: .gitignore
lesson11/web3example/: approve.js  get_receipt.js
lesson12/: Makefile  README.md  customSpec.json  customSpecRaw.json  node01-aura.json  node01-gran.json  node02-aura.json  node02-gran.json
lesson2/substrate-node-template/pallets/poe/: Cargo.toml
lesson2/substrate-node-template/runtime/src/: lib.rs
lesson3/: README.md  claim.txt  答题卡.md
lesson3/substrate-front-end-template/src/: App.js  PoeModule.js
lesson4/: README.md
lesson4/client/src/: script.js
lesson4/substrate-front-end-template/src/: App.js  PoeModule.js
lesson4/substrate-node-template/: Cargo.toml
lesson4/substrate-node-template/pallets/poe/: Cargo.toml
lesson4/substrate-node-template/runtime/: Cargo.toml
lesson4/substrate-node-template/runtime/src/: lib.rs
lesson5/: README.md
lesson5/node/: Cargo.toml
lesson5/pallets/kitties/: Cargo.toml
lesson5/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
lesson5/pallets/newkitties/: Cargo.toml
lesson5/pallets/newkitties/src/: lib.rs
lesson5/pallets/template/: Cargo.toml
lesson5/pallets/template/tests/: mod.rs
lesson5/runtime/: Cargo.toml
lesson5/runtime/src/: lib.rs
lesson6/: README.md  答题卡.md
lesson6/pallets/kitties/src/: lib.rs
lesson6/scripts/: kitties.json
lesson7/: README.md  answer.md  pallet-membership代码分析.md  答题卡.md
lesson7/pallets/kitties/src/: lib.rs  linked_item.rs
lesson8/: README.md
lesson8/substrate-node-template/pallets/template/: Cargo.toml
lesson8/substrate-node-template/runtime/src/: lib.rs
lesson9/: README.md
lesson9/substrate-node-template/node/src/: service.rs
lesson9/substrate-node-template/pallets/template/: Cargo.toml
(+15 files in other folders)
