[package]
name = "pallet-kitties"
version = "0.1.0"
authors = ["ylic"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', version = '2.0.0-rc2' }
frame-system = { default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', version = '2.0.0-rc2' }
sp-io = { default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', version = '2.0.0-rc2' }
pallet-randomness-collective-flip = { default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', version = '2.0.0-rc2' }
sp-runtime = { default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', version = '2.0.0-rc2' }
sp-std = { default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', version = '2.0.0-rc2' }



[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"pallet-randomness-collective-flip/std",
	"sp-runtime/std",
	"sp-std/std",
]