[package]
name = "pallet-new-kitties"
version = "0.1.0"
authors = ["ylic"]
edition = "2020"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', version = '2.0.0-rc2' }
frame-system = { default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', version = '2.0.0-rc2' }

[features]
default = "std"
std = [
	"frame-support/std",
	"frame-system/std",
]